# LLM-FM

./: LICENSE  README.md  main.py  pyproject.toml
src/tfsp/: __init__.py  benchmark.py  buffer.py
src/tfsp/audio/: __init__.py  player.py  tone.py
src/tfsp/encoders/: __init__.py  base.py  dtmf.py  fsk.py  ultrasonic.py
src/tfsp/providers/: __init__.py  anthropic.py  base.py  openai.py
src/tfsp/tts/: __init__.py  elevenlabs.py
tests/: __init__.py  test_audio.py  test_encoders.py  test_providers.py
