[project]
name = "llmfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "elevenlabs>=2.28.0",
    "httpx>=0.28.1",
    "livekit-api>=1.1.0",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sounddevice>=0.5.3",
    "tiktoken>=0.12.0",
]
